--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "react-calc",
+  "name": "CalcMate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "types": "dist/main.js",
   "scripts": {
-  "start": "webpack serve --mode development --open",
-  "build": "webpack --mode production"
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/cli": "^7.26.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
